# docs/swagger.json
@@ -60,6 +60,11 @@
         },
         "/api/admin/login": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Login as an admin and receive a JWT token",
                 "consumes": [
                     "application/json"
